fix(settings-page): themes ui list shows clipped when selected or hovered (@byseif21)

--- a/frontend/src/styles/settings.scss
+++ b/frontend/src/styles/settings.scss
@@ -50,7 +50,7 @@
   .settingsGroup {
     display: grid;
     gap: 2rem;
-    overflow: hidden;
+    overflow: visible;
     &.quickNav {
       justify-content: center;
       .links {
